--- a/COSC 4P14/Lab 1/.vscode/settings.json
+++ b/COSC 4P14/Lab 1/.vscode/settings.json
@@ -39,6 +39,11 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "bitset": "cpp",
+        "list": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "xhash": "cpp"
     }
 }
